@@ -38,7 +38,9 @@ import apg.parser.TokenCode;
 import java.util.LinkedList;
 import java.util.List;
 
-import static gblibx.Util.*;
+import static gblibx.Util.downcast;
+import static gblibx.Util.invariant;
+import static gblibx.Util.isNonNull;
 import static java.util.Objects.isNull;
 
 public class Production {
@@ -55,47 +57,55 @@ public class Production {
     }
 
     private static Alternates flatten(Node expr) {
-        return flatten(expr, null, null);
+        return flatten(expr, new State());
     }
 
     /**
      * Flatten expressions into alternates.
      */
-    private static Alternates flatten(Node expr, Alternates alts, Alternate alt) {
-        if (isNull(expr)) return alts;
-        List<Node> nodes = expr.toNonTerminalNode().getNodes(true);
-        for (boolean stay = true; stay; ) {
+    private static Alternates flatten(Node expr, State state) {
+        if (isNull(expr)) return state.alts;
+        if (expr.isTerminal()) return state.add(expr).alts;
+        final LinkedList<Node> nodes = expr.toNonTerminalNode().getNodes();
+        while (!nodes.isEmpty()) {
+            expr = nodes.remove();
             invariant(isNonNull(expr));
-            stay = expr.isNonTerminal();
-            if (stay) {
-                invariant(!nodes.isEmpty());  //?
-                expr = nodes.remove(0);
-                if (expr instanceof Expression.XNode.AltNode) {
-                    boolean todo = true;
-                } else {
-                    alt = Alternate.add(alt, expr);
-                }
-            } else {
+            if (expr.isTerminal()) {
                 Token tok = downcast(expr.toToken());
                 switch (tok.type) {
                     case eLeftParen:
-                        alt = Alternate.add(alt, expr);
-                        expr = nodes.remove(0);
-                        Alternate.add(alt, flatten(expr));
-                        tok = downcast(nodes.remove(0).toToken());
-                        invariant(TokenCode.eRightParen == tok.type);
-                        alt.add(tok);
-                        break;
-                    case eRightParen:
-                        alts = Alternates.add(alts, alt);
-                        nodes.add(0, tok);
+                        state.add(tok);
+                        expr = nodes.pop();
+                        Alternates parend = flatten(expr);
+                        //expect the recursion to have added ')' to end of its Alternates.
+                        //want to move it up to this level.
+                        expr = parend.toNonTerminalNode().getNodes().peekLast() //last Alternate
+                                .toNonTerminalNode().getNodes().removeLast(); //the ')' token
+                        invariant(TokenCode.eRightParen == expr.toToken().type);
+                        state.add(parend).add(expr);
                         break;
                     default:
-                        alt = Alternate.add(alt, expr);
+                        state.add(tok);
+                }
+            } else {
+                if (expr instanceof Expression.XNode.AltNode) {
+                    final LinkedList<Node> xnodes = expr.toNonTerminalNode().getNodes();
+                    invariant(TokenCode.eOr == xnodes.peekFirst().toToken().type);
+                    if (1 < xnodes.size()) {
+                        invariant(2 == xnodes.size());
+                        state.alt = null; //forces next add to start new alt
+                        flatten(xnodes.removeLast(), state);
+                    } else {
+                        //empty alternate
+                        state.alts = Alternates.add(state.alts, new Alternate());
+                    }
+                } else {
+                    // keep at same level ?!
+                    flatten(expr, state);
                 }
             }
         }
-        return alts;
+        return state.alts;
     }
 
     public static class Alternate extends NonTerminalNode {
@@ -121,6 +131,18 @@ public class Production {
             if (isNull(alts)) alts = new Alternates();
             alts.add(alt);
             return alts;
+        }
+    }
+
+    private static class State {
+        public Alternate alt = null;
+        public Alternates alts = null;
+
+        private State add(Node node) {
+            boolean addToAlts = isNull(alt);
+            alt = Alternate.add(alt, node);
+            if (addToAlts) alts = Alternates.add(alts, alt);
+            return this;
         }
     }
 
